# apcn-rs

./: .gitignore  Cargo.toml  Makefile  README.md  README_WASM.md  benchmark_report.html  generate_report.py  index.html  install.ps1  install.sh
.github/workflows/: pages.yml  release.yml
benches/: compare.rs  e_compare.rs  gamma_compare.rs  ln_compare.rs  phi_compare.rs  pi_compare.rs  sqrt_compare.rs
gh_page/: benchmark_data.json  generate_report.py  index.html  playground.html  report.html  theory.html
src/: cli.rs  lib.rs  main.rs  wasm.rs
src/algo/: bs_utils.rs  e.rs  gamma.rs  log.rs  mod.rs  phi.rs  pi.rs  sqrt.rs
src/backend/: dashu.rs  mod.rs  rug.rs
tests/: test_e.rs  test_gamma.rs  test_log.rs  test_phi.rs  test_pi.rs  test_sqrt.rs
tests/data/: ln2_million.txt  ln3_million.txt  ln5_million.txt  phi_million.txt  sqrt2_million.txt  sqrt5_million.txt
