[package]
name = "apcn"
version = "0.3.1"
edition = "2024"
description = "Arbitrary Precision Constant Numbers (apcn) calculation written in Rust."
readme = "README.md"
repository = "https://github.com/BreezeWhite/apcn-rs"
license = "MIT"

[[bin]]
name = "apcn"
path = "src/main.rs"
required-features = ["cli"]

[features]
# By default, compile the CLI with the fast "rug" backend
default = ["cli", "rug"]

# Enables CLI support (depends on clap)
cli = ["dep:clap"]

# Backend features (pull in respective backend libraries)
rug = ["dep:rug"]
dashu = ["dep:dashu"]

# Enable wasm support for web frontend
wasm = ["dep:wasm-bindgen"]

[dependencies]
rayon = "1.12.0"
rug = { version = "1.30.0", optional = true }
dashu = { version = "0.4.3", optional = true }
clap = { version = "4.6.1", optional = true, features = ["derive"] }
wasm-bindgen = { version = "0.2.126", optional = true }

[dev-dependencies]
criterion = "0.8.2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "compare"
harness = false

# [profile.release]
# opt-level = "s"
# codegen-units = 1
# lto = true
# strip = true
# panic = "abort"
